--- a/show.ipynb
+++ b/show.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,34 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ConfigurationError",
-     "evalue": "The resolution lifetime expired after 20.001 seconds: Server 210.245.1.254 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.253 UDP port 53 answered The DNS operation timed out.; Server 192.168.68.1 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.254 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.253 UDP port 53 answered The DNS operation timed out.; Server 192.168.68.1 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.254 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.253 UDP port 53 answered The DNS operation timed out.; Server 192.168.68.1 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.254 UDP port 53 answered The DNS operation timed out.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mLifetimeTimeout\u001b[0m                           Traceback (most recent call last)",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pymongo/srv_resolver.py:89\u001b[0m, in \u001b[0;36m_SrvResolver._resolve_uri\u001b[0;34m(self, encapsulate_errors)\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 89\u001b[0m     results \u001b[39m=\u001b[39m _resolve(\n\u001b[1;32m     90\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39m_\u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__srv \u001b[39m+\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39m._tcp.\u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__fqdn, \u001b[39m\"\u001b[39;49m\u001b[39mSRV\u001b[39;49m\u001b[39m\"\u001b[39;49m, lifetime\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__connect_timeout\n\u001b[1;32m     91\u001b[0m     )\n\u001b[1;32m     92\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m exc:\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pymongo/srv_resolver.py:43\u001b[0m, in \u001b[0;36m_resolve\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(resolver, \u001b[39m\"\u001b[39m\u001b[39mresolve\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m     42\u001b[0m     \u001b[39m# dnspython >= 2\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m     \u001b[39mreturn\u001b[39;00m resolver\u001b[39m.\u001b[39;49mresolve(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m     44\u001b[0m \u001b[39m# dnspython 1.X\u001b[39;00m\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/dns/resolver.py:1193\u001b[0m, in \u001b[0;36mresolve\u001b[0;34m(qname, rdtype, rdclass, tcp, source, raise_on_no_answer, source_port, lifetime, search)\u001b[0m\n\u001b[1;32m   1184\u001b[0m \u001b[39m\"\"\"Query nameservers to find the answer to the question.\u001b[39;00m\n\u001b[1;32m   1185\u001b[0m \n\u001b[1;32m   1186\u001b[0m \u001b[39mThis is a convenience function that uses the default resolver\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1190\u001b[0m \u001b[39mparameters.\u001b[39;00m\n\u001b[1;32m   1191\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1193\u001b[0m \u001b[39mreturn\u001b[39;00m get_default_resolver()\u001b[39m.\u001b[39;49mresolve(qname, rdtype, rdclass, tcp, source,\n\u001b[1;32m   1194\u001b[0m                                       raise_on_no_answer, source_port,\n\u001b[1;32m   1195\u001b[0m                                       lifetime, search)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/dns/resolver.py:1066\u001b[0m, in \u001b[0;36mResolver.resolve\u001b[0;34m(self, qname, rdtype, rdclass, tcp, source, raise_on_no_answer, source_port, lifetime, search)\u001b[0m\n\u001b[1;32m   1065\u001b[0m     time\u001b[39m.\u001b[39msleep(backoff)\n\u001b[0;32m-> 1066\u001b[0m timeout \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_compute_timeout(start, lifetime,\n\u001b[1;32m   1067\u001b[0m                                 resolution\u001b[39m.\u001b[39;49merrors)\n\u001b[1;32m   1068\u001b[0m \u001b[39mtry\u001b[39;00m:\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/dns/resolver.py:879\u001b[0m, in \u001b[0;36mBaseResolver._compute_timeout\u001b[0;34m(self, start, lifetime, errors)\u001b[0m\n\u001b[1;32m    878\u001b[0m \u001b[39mif\u001b[39;00m duration \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m lifetime:\n\u001b[0;32m--> 879\u001b[0m     \u001b[39mraise\u001b[39;00m LifetimeTimeout(timeout\u001b[39m=\u001b[39mduration, errors\u001b[39m=\u001b[39merrors)\n\u001b[1;32m    880\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mmin\u001b[39m(lifetime \u001b[39m-\u001b[39m duration, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtimeout)\n",
-      "\u001b[0;31mLifetimeTimeout\u001b[0m: The resolution lifetime expired after 20.001 seconds: Server 210.245.1.254 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.253 UDP port 53 answered The DNS operation timed out.; Server 192.168.68.1 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.254 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.253 UDP port 53 answered The DNS operation timed out.; Server 192.168.68.1 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.254 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.253 UDP port 53 answered The DNS operation timed out.; Server 192.168.68.1 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.254 UDP port 53 answered The DNS operation timed out.",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mConfigurationError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[1;32m/Users/oraichain/Documents/Price/show.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000002?line=0'>1</a>\u001b[0m myclient \u001b[39m=\u001b[39m pymongo\u001b[39m.\u001b[39;49mMongoClient(\u001b[39m\"\u001b[39;49m\u001b[39mmongodb+srv://hoangks5:YrfvDz4Mt8xrrHxi@cluster0.tcbxc.mongodb.net/\u001b[39;49m\u001b[39m\"\u001b[39;49m,tlsCAFile\u001b[39m=\u001b[39;49mcertifi\u001b[39m.\u001b[39;49mwhere())\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000002?line=1'>2</a>\u001b[0m mydb \u001b[39m=\u001b[39m myclient[\u001b[39m'\u001b[39m\u001b[39mprice\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000002?line=2'>3</a>\u001b[0m mycol \u001b[39m=\u001b[39m mydb[\u001b[39m'\u001b[39m\u001b[39mdatanew\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pymongo/mongo_client.py:704\u001b[0m, in \u001b[0;36mMongoClient.__init__\u001b[0;34m(self, host, port, document_class, tz_aware, connect, type_registry, **kwargs)\u001b[0m\n\u001b[1;32m    700\u001b[0m \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    701\u001b[0m     timeout \u001b[39m=\u001b[39m common\u001b[39m.\u001b[39mvalidate_timeout_or_none_or_zero(\n\u001b[1;32m    702\u001b[0m         keyword_opts\u001b[39m.\u001b[39mcased_key(\u001b[39m\"\u001b[39m\u001b[39mconnecttimeoutms\u001b[39m\u001b[39m\"\u001b[39m), timeout\n\u001b[1;32m    703\u001b[0m     )\n\u001b[0;32m--> 704\u001b[0m res \u001b[39m=\u001b[39m uri_parser\u001b[39m.\u001b[39;49mparse_uri(\n\u001b[1;32m    705\u001b[0m     entity,\n\u001b[1;32m    706\u001b[0m     port,\n\u001b[1;32m    707\u001b[0m     validate\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[1;32m    708\u001b[0m     warn\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[1;32m    709\u001b[0m     normalize\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[1;32m    710\u001b[0m     connect_timeout\u001b[39m=\u001b[39;49mtimeout,\n\u001b[1;32m    711\u001b[0m     srv_service_name\u001b[39m=\u001b[39;49msrv_service_name,\n\u001b[1;32m    712\u001b[0m     srv_max_hosts\u001b[39m=\u001b[39;49msrv_max_hosts,\n\u001b[1;32m    713\u001b[0m )\n\u001b[1;32m    714\u001b[0m seeds\u001b[39m.\u001b[39mupdate(res[\u001b[39m\"\u001b[39m\u001b[39mnodelist\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m    715\u001b[0m username \u001b[39m=\u001b[39m res[\u001b[39m\"\u001b[39m\u001b[39musername\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39mor\u001b[39;00m username\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pymongo/uri_parser.py:542\u001b[0m, in \u001b[0;36mparse_uri\u001b[0;34m(uri, default_port, validate, warn, normalize, connect_timeout, srv_service_name, srv_max_hosts)\u001b[0m\n\u001b[1;32m    540\u001b[0m connect_timeout \u001b[39m=\u001b[39m connect_timeout \u001b[39mor\u001b[39;00m options\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mconnectTimeoutMS\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    541\u001b[0m dns_resolver \u001b[39m=\u001b[39m _SrvResolver(fqdn, connect_timeout, srv_service_name, srv_max_hosts)\n\u001b[0;32m--> 542\u001b[0m nodes \u001b[39m=\u001b[39m dns_resolver\u001b[39m.\u001b[39;49mget_hosts()\n\u001b[1;32m    543\u001b[0m dns_options \u001b[39m=\u001b[39m dns_resolver\u001b[39m.\u001b[39mget_options()\n\u001b[1;32m    544\u001b[0m \u001b[39mif\u001b[39;00m dns_options:\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pymongo/srv_resolver.py:121\u001b[0m, in \u001b[0;36m_SrvResolver.get_hosts\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    120\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_hosts\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m--> 121\u001b[0m     _, nodes \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_srv_response_and_hosts(\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m    122\u001b[0m     \u001b[39mreturn\u001b[39;00m nodes\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pymongo/srv_resolver.py:101\u001b[0m, in \u001b[0;36m_SrvResolver._get_srv_response_and_hosts\u001b[0;34m(self, encapsulate_errors)\u001b[0m\n\u001b[1;32m    100\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_get_srv_response_and_hosts\u001b[39m(\u001b[39mself\u001b[39m, encapsulate_errors):\n\u001b[0;32m--> 101\u001b[0m     results \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_resolve_uri(encapsulate_errors)\n\u001b[1;32m    103\u001b[0m     \u001b[39m# Construct address tuples\u001b[39;00m\n\u001b[1;32m    104\u001b[0m     nodes \u001b[39m=\u001b[39m [\n\u001b[1;32m    105\u001b[0m         (maybe_decode(res\u001b[39m.\u001b[39mtarget\u001b[39m.\u001b[39mto_text(omit_final_dot\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)), res\u001b[39m.\u001b[39mport) \u001b[39mfor\u001b[39;00m res \u001b[39min\u001b[39;00m results\n\u001b[1;32m    106\u001b[0m     ]\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pymongo/srv_resolver.py:97\u001b[0m, in \u001b[0;36m_SrvResolver._resolve_uri\u001b[0;34m(self, encapsulate_errors)\u001b[0m\n\u001b[1;32m     95\u001b[0m         \u001b[39mraise\u001b[39;00m\n\u001b[1;32m     96\u001b[0m     \u001b[39m# Else, raise all errors as ConfigurationError.\u001b[39;00m\n\u001b[0;32m---> 97\u001b[0m     \u001b[39mraise\u001b[39;00m ConfigurationError(\u001b[39mstr\u001b[39m(exc))\n\u001b[1;32m     98\u001b[0m \u001b[39mreturn\u001b[39;00m results\n",
-      "\u001b[0;31mConfigurationError\u001b[0m: The resolution lifetime expired after 20.001 seconds: Server 210.245.1.254 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.253 UDP port 53 answered The DNS operation timed out.; Server 192.168.68.1 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.254 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.253 UDP port 53 answered The DNS operation timed out.; Server 192.168.68.1 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.254 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.253 UDP port 53 answered The DNS operation timed out.; Server 192.168.68.1 UDP port 53 answered The DNS operation timed out.; Server 210.245.1.254 UDP port 53 answered The DNS operation timed out."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myclient = pymongo.MongoClient(\"mongodb+srv://hoangks5:YrfvDz4Mt8xrrHxi@cluster0.tcbxc.mongodb.net/\",tlsCAFile=certifi.where())\n",
     "mydb = myclient['price']\n",
@@ -65,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,38 +180,14 @@
     "\n",
     "    \n",
     "    \n",
-    "    t.add_row([token,cov_meidan_coinbase/var_coinbase,cov_median_chainlink/var_chainlink,cov_vwa_coinbase/var_coinbase,cov_vwa_chainlink/var_chainlink])\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    "
+    "    t.add_row([token,cov_meidan_coinbase/var_coinbase,cov_median_chainlink/var_chainlink,cov_vwa_coinbase/var_coinbase,cov_vwa_chainlink/var_chainlink])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------+-----------------------+-----------------------------+-----------------------+-----------------------+\n",
-      "|   Token   |       Std Median      | Std Volume Weighted Average |      Std Coinbase     |     Std Chainlink     |\n",
-      "+-----------+-----------------------+-----------------------------+-----------------------+-----------------------+\n",
-      "|  BTC-USD  |   390.4593569277665   |      388.2582194144055      |   391.28828198472405  |   391.9368358989698   |\n",
-      "|  ETH-USD  |   50.62205983660766   |      50.49980410195757      |   50.89266543773107   |   49.869469410234565  |\n",
-      "|  DOGE-USD | 0.0011821877159763862 |    0.0011669281633273421    | 0.0012017878384007127 | 0.0011529596985671417 |\n",
-      "|  LINK-USD |   0.4081190577591527  |     0.40738400282366954     |  0.41096034748680826  |  0.40814676703368025  |\n",
-      "|  SOL-USD  |   1.192198368676087   |      1.1894774640492631     |   1.193620473277132   |   1.1939125422382417  |\n",
-      "| MATIC-USD |  0.013899069878205246 |     0.01374937289832228     |  0.014203173685137094 |  0.013971135076484321 |\n",
-      "|  DOT-USD  |  0.35451418029870274  |     0.35437735519703834     |   0.3548095502951465  |   0.3549727321419387  |\n",
-      "|  ATOM-USD |   0.4845783321649295  |      0.4844992600937465     |   0.4881709682542872  |   0.4842418508106385  |\n",
-      "+-----------+-----------------------+-----------------------------+-----------------------+-----------------------+\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = PrettyTable(['Token', 'Std Median','Std Volume Weighted Average',\n",
     "                'Std Coinbase','Std Chainlink'])\n",
@@ -247,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -369,13 +320,6 @@
     "    cov(token)\n",
     "print(t)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
