--- a/show.ipynb
+++ b/show.ipynb
@@ -187,7 +187,26 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-----------------------+-----------------------------+-----------------------+-----------------------+\n",
+      "|   Token   |       Std Median      | Std Volume Weighted Average |      Std Coinbase     |     Std Chainlink     |\n",
+      "+-----------+-----------------------+-----------------------------+-----------------------+-----------------------+\n",
+      "|  BTC-USD  |   393.3540359890295   |      391.17722952564833     |   394.15621482630854  |   394.7993199897286   |\n",
+      "|  ETH-USD  |   50.987703291402916  |      50.855684914990924     |   51.26104801367865   |   50.23788622441385   |\n",
+      "|  DOGE-USD | 0.0011839540450840067 |    0.0011682806155936872    | 0.0012036703290766973 | 0.0011539527056789495 |\n",
+      "|  LINK-USD |  0.41375559768544057  |      0.4129388809897978     |   0.4167147093859099  |  0.41378643896973827  |\n",
+      "|  SOL-USD  |   1.197679117563887   |      1.1944154318403974     |   1.1992951490085688  |   1.1995602364540752  |\n",
+      "| MATIC-USD |  0.013842822989697169 |     0.01369437444482656     |  0.014125296236154553 |  0.013922016895193984 |\n",
+      "|  DOT-USD  |   0.357362447593935   |       0.35719621044992      |  0.35766728592496766  |   0.3578383465115967  |\n",
+      "|  ATOM-USD |   0.4907394447278639  |     0.49063058695457334     |  0.49412617911868023  |  0.49045377799308354  |\n",
+      "+-----------+-----------------------+-----------------------------+-----------------------+-----------------------+\n"
+     ]
+    }
+   ],
    "source": [
     "t = PrettyTable(['Token', 'Std Median','Std Volume Weighted Average',\n",
     "                'Std Coinbase','Std Chainlink'])\n",
@@ -198,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -208,75 +227,75 @@
       "+---------+--------------------+---------------------------------+\n",
       "|  Token  |   Percent Median   | Percent Volume Weighted Average |\n",
       "+---------+--------------------+---------------------------------+\n",
-      "| BTC-USD | 1.7049290069862388 |        1.7145946959716643       |\n",
-      "| BTC-USD | 5.026865399389706  |         5.05536401565056        |\n",
-      "| BTC-USD | 3.102267474571144  |        3.1198550412298935       |\n",
-      "| BTC-USD | 5.8831629534957965 |        5.916516144816992        |\n",
-      "| BTC-USD | 2.7133008477589406 |        2.7286832607572906       |\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "|  Token  |   Percent Median   | Percent Volume Weighted Average |\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "| SOL-USD | 5.349065118121075  |        5.361300991829462        |\n",
-      "| SOL-USD | 0.6567277343185256 |        0.6582299851680607       |\n",
-      "| SOL-USD | 5.8438820200213435 |        5.8572497769629175       |\n",
-      "| SOL-USD | 1.939705377077454  |        1.9441424122417845       |\n",
-      "| SOL-USD | 4.523339346969882  |        4.533686390381673        |\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "|  Token  |   Percent Median   | Percent Volume Weighted Average |\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "| DOT-USD | 6.6950334776239835 |         6.69761843014081        |\n",
-      "| DOT-USD | 2.7489389105872455 |        2.7500002759380346       |\n",
-      "| DOT-USD | 6.827660849197162  |        6.8302970091439565       |\n",
-      "| DOT-USD | 1.8402499941217065 |        1.8409605146694814       |\n",
-      "| DOT-USD | 4.837280780067721  |        4.839148454242738        |\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "|  Token  |   Percent Median   | Percent Volume Weighted Average |\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "| ETH-USD | 3.261496636618233  |        3.269392442838858        |\n",
-      "| ETH-USD | 2.0511083356031925 |        2.0560738945964476       |\n",
-      "| ETH-USD | 2.919513714614783  |        2.926581609240287        |\n",
-      "| ETH-USD | 1.4477912459804196 |        1.4512962255648938       |\n",
-      "| ETH-USD | 1.4481757404801652 |        1.4516816508931518       |\n",
+      "| BTC-USD | 1.1392092605877973 |        1.1455486839857243       |\n",
+      "| BTC-USD | 5.197936182456489  |        5.226861437364437        |\n",
+      "| BTC-USD | 2.4927122618758593 |        2.5065836013952394       |\n",
+      "| BTC-USD | 2.5903126329655572 |        2.6047270948923282       |\n",
+      "| BTC-USD | 0.883259104971856  |        0.8881742277945073       |\n",
       "+---------+--------------------+---------------------------------+\n",
       "+----------+--------------------+---------------------------------+\n",
       "|  Token   |   Percent Median   | Percent Volume Weighted Average |\n",
       "+----------+--------------------+---------------------------------+\n",
-      "| DOGE-USD | 2.614270420040173  |        2.6484564122607166       |\n",
-      "| DOGE-USD | 2.4749134915768805 |        2.5072771570649612       |\n",
-      "| DOGE-USD | 2.7277128948252782 |        2.763382338616384        |\n",
-      "| DOGE-USD |  7.84842982840634  |        7.951061277318675        |\n",
-      "| DOGE-USD | 5.812677693525277  |        5.888688251915915        |\n",
+      "| DOGE-USD | 8.527618258534655  |        8.642023155535863        |\n",
+      "| DOGE-USD | 3.758977046033988  |        3.8094067637750495       |\n",
+      "| DOGE-USD | 3.1327415526191005 |        3.174769814648782        |\n",
+      "| DOGE-USD | 2.7415040171673484 |        2.7782835111835738       |\n",
+      "| DOGE-USD | 4.302493871524601  |        4.360215307135004        |\n",
       "+----------+--------------------+---------------------------------+\n",
       "+----------+--------------------+---------------------------------+\n",
       "|  Token   |   Percent Median   | Percent Volume Weighted Average |\n",
       "+----------+--------------------+---------------------------------+\n",
-      "| ATOM-USD | 5.892525414244341  |        5.893487096185636        |\n",
-      "| ATOM-USD | 2.248134216985421  |        2.248501120804428        |\n",
-      "| ATOM-USD | 1.0159117893119725 |        1.0160775898733698       |\n",
-      "| ATOM-USD | 4.331673656887461  |        4.3323806020490965       |\n",
-      "| ATOM-USD | 1.4297692856276083 |        1.4300026292630694       |\n",
-      "+----------+--------------------+---------------------------------+\n",
-      "+----------+--------------------+---------------------------------+\n",
-      "|  Token   |   Percent Median   | Percent Volume Weighted Average |\n",
-      "+----------+--------------------+---------------------------------+\n",
-      "| LINK-USD | 5.630526205157893  |        5.640685529156336        |\n",
-      "| LINK-USD | 0.620801137874529  |        0.6219212676223476       |\n",
-      "| LINK-USD | 3.8240208545231456 |        3.8309206477968747       |\n",
-      "| LINK-USD | 9.863660226004804  |        9.881457518193008        |\n",
-      "| LINK-USD | 1.6051284293392774 |        1.6080246097633792       |\n",
+      "| ATOM-USD | 1.2866366025950882 |        1.2869220727620871       |\n",
+      "| ATOM-USD | 1.047523699403825  |        1.0477561168282952       |\n",
+      "| ATOM-USD | 1.2229477204829249 |        1.2232190597945012       |\n",
+      "| ATOM-USD | 1.4208706121217547 |        1.4211858652166132       |\n",
+      "| ATOM-USD | 2.6494901853147903 |        2.6500780361532774       |\n",
       "+----------+--------------------+---------------------------------+\n",
       "+-----------+--------------------+---------------------------------+\n",
       "|   Token   |   Percent Median   | Percent Volume Weighted Average |\n",
       "+-----------+--------------------+---------------------------------+\n",
-      "| MATIC-USD | 7.335908615028557  |        7.415778684193762        |\n",
-      "| MATIC-USD | 8.692609189747541  |        8.787250403760066        |\n",
-      "| MATIC-USD | 14.039648957160738 |        14.192506332042212       |\n",
-      "| MATIC-USD | 11.569754828756126 |        11.695721108720974       |\n",
-      "| MATIC-USD |  8.65028119863812  |        8.744461564546485        |\n",
-      "+-----------+--------------------+---------------------------------+\n"
+      "| MATIC-USD | 3.0871989841964256 |        3.1206645651746876       |\n",
+      "| MATIC-USD | 14.291227332045258 |        14.446145828717347       |\n",
+      "| MATIC-USD | 21.604907705466974 |        21.83910731231006        |\n",
+      "| MATIC-USD | 13.249410622116153 |        13.393035709568716       |\n",
+      "| MATIC-USD | 16.732518224711246 |        16.913900586679425       |\n",
+      "+-----------+--------------------+---------------------------------+\n",
+      "+---------+--------------------+---------------------------------+\n",
+      "|  Token  |   Percent Median   | Percent Volume Weighted Average |\n",
+      "+---------+--------------------+---------------------------------+\n",
+      "| DOT-USD | 3.6031366898301096 |        3.6048135697501356       |\n",
+      "| DOT-USD | 1.7531182930100586 |        1.7539341845834413       |\n",
+      "| DOT-USD | 0.7527285528176215 |        0.7530788685297657       |\n",
+      "| DOT-USD | 11.69336961550222  |        11.69881164515406        |\n",
+      "| DOT-USD | 1.5387607171312698 |        1.5394768478724559       |\n",
+      "+---------+--------------------+---------------------------------+\n",
+      "+---------+--------------------+---------------------------------+\n",
+      "|  Token  |   Percent Median   | Percent Volume Weighted Average |\n",
+      "+---------+--------------------+---------------------------------+\n",
+      "| SOL-USD | 3.1851731673805257 |        3.1938765078733757       |\n",
+      "| SOL-USD | 5.817139590090017  |        5.833034658862252        |\n",
+      "| SOL-USD | 1.0082816380380775 |        1.0110367216543794       |\n",
+      "| SOL-USD | 2.829425998013517  |        2.8371572755817898       |\n",
+      "| SOL-USD |  2.43330730213751  |        2.4399562034252407       |\n",
+      "+---------+--------------------+---------------------------------+\n",
+      "+---------+--------------------+---------------------------------+\n",
+      "|  Token  |   Percent Median   | Percent Volume Weighted Average |\n",
+      "+---------+--------------------+---------------------------------+\n",
+      "| ETH-USD | 3.227774443935953  |        3.2361535571506286       |\n",
+      "| ETH-USD | 2.6772526860369728 |        2.6842026770447838       |\n",
+      "| ETH-USD | 1.6104343030258303 |        1.6146148960580358       |\n",
+      "| ETH-USD | 4.457659670241716  |        4.469231493396713        |\n",
+      "| ETH-USD | 2.8985772728450305 |        2.9061018095041153       |\n",
+      "+---------+--------------------+---------------------------------+\n",
+      "+----------+--------------------+---------------------------------+\n",
+      "|  Token   |   Percent Median   | Percent Volume Weighted Average |\n",
+      "+----------+--------------------+---------------------------------+\n",
+      "| LINK-USD | 0.980431310413268  |        0.9823704221244881       |\n",
+      "| LINK-USD | 2.340876538224293  |        2.3455063588568854       |\n",
+      "| LINK-USD | 1.554373000172365  |        1.5574472623427233       |\n",
+      "| LINK-USD | 1.109692900794437  |        1.1118876680126333       |\n",
+      "| LINK-USD | 1.1841255144605978 |        1.1864674956154806       |\n",
+      "+----------+--------------------+---------------------------------+\n"
      ]
     }
    ],
@@ -292,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -302,20 +321,20 @@
       "+-----------+------------------------------------+-------------------------------------+---------------------------------+----------------------------------+\n",
       "|   Token   | Beta Coefficient Coinbase (Median) | Beta Coefficient Chainlink (Median) | Beta Coefficient Coinbase (VWA) | Beta Coefficient Chainlink (VWA) |\n",
       "+-----------+------------------------------------+-------------------------------------+---------------------------------+----------------------------------+\n",
-      "|  BTC-USD  |         0.9982592840912878         |          0.9967628527862866         |        0.9912984647127757       |        0.9896120960336604        |\n",
-      "|  ETH-USD  |         0.995116690056209          |          1.0156717266912465         |        0.9915495974214489       |        1.0120354642489195        |\n",
-      "|  DOGE-USD |         0.981900672764427          |          1.0251757895169273         |        0.9667247344440849       |        1.0091462780185456        |\n",
-      "|  LINK-USD |         0.9925017276836368         |          1.0005880114211425         |        0.9902755213607571       |        0.9981918885822266        |\n",
-      "|  SOL-USD  |         0.9992125833672695         |          0.9991084175891588         |        0.9956841669986812       |        0.9954191625466364        |\n",
-      "| MATIC-USD |         0.9734777017250182         |          0.9946761711368399         |        0.9606190215785753       |        0.9804475238970161        |\n",
-      "|  DOT-USD  |         0.9996687604112583         |          0.9993456535763546         |        0.9986436537745337       |        0.9982180887422394        |\n",
-      "|  ATOM-USD |         0.9917903299524234         |          1.0012366400946344         |        0.9912357423242402       |        1.0004814977149203        |\n",
+      "|  BTC-USD  |         0.9983448900907197         |          0.9968617365465524         |        0.9915066066077703       |        0.9898368087898881        |\n",
+      "|  ETH-USD  |         0.9950813327454583         |          1.0154989746499845         |        0.9913523825669099       |        1.0116972005373122        |\n",
+      "|  DOGE-USD |         0.9818694678677874         |          1.0257565460899931         |        0.9663644726943311       |        1.0093870014962398        |\n",
+      "|  LINK-USD |         0.9924314014913209         |          1.000518626639554          |        0.9900044724614308       |        0.9979211738522515        |\n",
+      "|  SOL-USD  |         0.9990332780345109         |          0.9989591113353645         |        0.9950566313980186       |        0.9948222466311506        |\n",
+      "| MATIC-USD |         0.9742755043165641         |          0.9941010333673825         |        0.9614327629741736       |        0.979930555905091         |\n",
+      "|  DOT-USD  |         0.9996376683507059         |          0.9992934512040449         |        0.9985340392264893       |        0.9980903467319626        |\n",
+      "|  ATOM-USD |         0.9922894651011555         |          1.001129239535618          |        0.9916899394912355       |        1.0003290239885243        |\n",
       "+-----------+------------------------------------+-------------------------------------+---------------------------------+----------------------------------+\n"
      ]
     }
    ],
    "source": [
-    "t = PrettyTable(['Token', 'Beta Coefficient Coinbase (Median)','Beta Coefficient Chainlink (Median)', 'Beta Coefficient Coinbase (VWA)','Beta Coefficient Chainlink (VWA)'])\n",
+    "t = PrettyTable(['Token', 'Beta Coinbase (Median)','Beta Chainlink (Median)', 'Beta Coinbase (VWA)','Beta Chainlink (VWA)'])\n",
     "for token in TOKENS:\n",
     "    cov(token)\n",
     "print(t)"
