--- a/show.ipynb
+++ b/show.ipynb
@@ -185,25 +185,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----------+-----------------------+-----------------------------+-----------------------+-----------------------+\n",
-      "|   Token   |       Std Median      | Std Volume Weighted Average |      Std Coinbase     |     Std Chainlink     |\n",
-      "+-----------+-----------------------+-----------------------------+-----------------------+-----------------------+\n",
-      "|  BTC-USD  |   393.3540359890295   |      391.17722952564833     |   394.15621482630854  |   394.7993199897286   |\n",
-      "|  ETH-USD  |   50.987703291402916  |      50.855684914990924     |   51.26104801367865   |   50.23788622441385   |\n",
-      "|  DOGE-USD | 0.0011839540450840067 |    0.0011682806155936872    | 0.0012036703290766973 | 0.0011539527056789495 |\n",
-      "|  LINK-USD |  0.41375559768544057  |      0.4129388809897978     |   0.4167147093859099  |  0.41378643896973827  |\n",
-      "|  SOL-USD  |   1.197679117563887   |      1.1944154318403974     |   1.1992951490085688  |   1.1995602364540752  |\n",
-      "| MATIC-USD |  0.013842822989697169 |     0.01369437444482656     |  0.014125296236154553 |  0.013922016895193984 |\n",
-      "|  DOT-USD  |   0.357362447593935   |       0.35719621044992      |  0.35766728592496766  |   0.3578383465115967  |\n",
-      "|  ATOM-USD |   0.4907394447278639  |     0.49063058695457334     |  0.49412617911868023  |  0.49045377799308354  |\n",
-      "+-----------+-----------------------+-----------------------------+-----------------------+-----------------------+\n"
+      "+-----------+----------------------+-----------------------------+-----------------------+-----------------------+\n",
+      "|   Token   |      Std Median      | Std Volume Weighted Average |      Std Coinbase     |     Std Chainlink     |\n",
+      "+-----------+----------------------+-----------------------------+-----------------------+-----------------------+\n",
+      "|  BTC-USD  |  393.54581423561194  |      391.36939414945067     |   394.3426192178208   |    394.987777320205   |\n",
+      "|  ETH-USD  |  51.01278707500176   |      50.88038373086427      |   51.28674630005115   |   50.26310076911679   |\n",
+      "|  DOGE-USD | 0.001184261769583353 |    0.0011685726960235406    | 0.0012039850351069214 | 0.0011541976186462246 |\n",
+      "|  LINK-USD |  0.414135647144762   |     0.41331815472439004     |  0.41709643724788725  |   0.414168148753951   |\n",
+      "|  SOL-USD  |  1.1983147283515347  |      1.195033586391568      |   1.1999189353151112  |   1.2002071803129337  |\n",
+      "| MATIC-USD | 0.013841721067817597 |     0.013693013799458005    |  0.014124728129315887 |  0.013920824135405607 |\n",
+      "|  DOT-USD  |  0.3575504983817964  |     0.35737994645187343     |   0.3578668166551932  |   0.3580261250985632  |\n",
+      "|  ATOM-USD |  0.4911258403186597  |     0.49102356547282333     |  0.49449746775625386  |  0.49083741183467916  |\n",
+      "+-----------+----------------------+-----------------------------+-----------------------+-----------------------+\n"
      ]
     }
    ],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -227,75 +227,75 @@
       "+---------+--------------------+---------------------------------+\n",
       "|  Token  |   Percent Median   | Percent Volume Weighted Average |\n",
       "+---------+--------------------+---------------------------------+\n",
-      "| BTC-USD | 1.1392092605877973 |        1.1455486839857243       |\n",
-      "| BTC-USD | 5.197936182456489  |        5.226861437364437        |\n",
-      "| BTC-USD | 2.4927122618758593 |        2.5065836013952394       |\n",
-      "| BTC-USD | 2.5903126329655572 |        2.6047270948923282       |\n",
-      "| BTC-USD | 0.883259104971856  |        0.8881742277945073       |\n",
+      "| SOL-USD | 9.057329124028927  |        9.082197364530698        |\n",
+      "| SOL-USD | 1.4783405002667613 |        1.482399503379126        |\n",
+      "| SOL-USD | 6.868031549897956  |        6.886888749191232        |\n",
+      "| SOL-USD | 2.6960785553761095 |        2.703481038934854        |\n",
+      "| SOL-USD | 4.960731155630553  |        4.974351578798744        |\n",
       "+---------+--------------------+---------------------------------+\n",
       "+----------+--------------------+---------------------------------+\n",
       "|  Token   |   Percent Median   | Percent Volume Weighted Average |\n",
       "+----------+--------------------+---------------------------------+\n",
-      "| DOGE-USD | 8.527618258534655  |        8.642023155535863        |\n",
-      "| DOGE-USD | 3.758977046033988  |        3.8094067637750495       |\n",
-      "| DOGE-USD | 3.1327415526191005 |        3.174769814648782        |\n",
-      "| DOGE-USD | 2.7415040171673484 |        2.7782835111835738       |\n",
-      "| DOGE-USD | 4.302493871524601  |        4.360215307135004        |\n",
-      "+----------+--------------------+---------------------------------+\n",
-      "+----------+--------------------+---------------------------------+\n",
-      "|  Token   |   Percent Median   | Percent Volume Weighted Average |\n",
-      "+----------+--------------------+---------------------------------+\n",
-      "| ATOM-USD | 1.2866366025950882 |        1.2869220727620871       |\n",
-      "| ATOM-USD | 1.047523699403825  |        1.0477561168282952       |\n",
-      "| ATOM-USD | 1.2229477204829249 |        1.2232190597945012       |\n",
-      "| ATOM-USD | 1.4208706121217547 |        1.4211858652166132       |\n",
-      "| ATOM-USD | 2.6494901853147903 |        2.6500780361532774       |\n",
-      "+----------+--------------------+---------------------------------+\n",
+      "| LINK-USD | 4.790126754671918  |        4.799601035609749        |\n",
+      "| LINK-USD | 1.2524840210717485 |        1.2549612802537116       |\n",
+      "| LINK-USD | 0.8560529890360538 |        0.8577461564471015       |\n",
+      "| LINK-USD | 4.815034919596595  |        4.824558465817837        |\n",
+      "| LINK-USD | 1.7630684677714583 |        1.766555600123438        |\n",
+      "+----------+--------------------+---------------------------------++---------+--------------------+---------------------------------+\n",
+      "|  Token  |   Percent Median   | Percent Volume Weighted Average |\n",
+      "+---------+--------------------+---------------------------------+\n",
+      "| BTC-USD | 1.6439754474077244 |        1.653117657397522        |\n",
+      "| BTC-USD | 2.756965801507129  |        2.772297393187414        |\n",
+      "| BTC-USD | 4.106163595490529  |        4.128998127418382        |\n",
+      "| BTC-USD | 3.7944088623752004 |        3.815509714374956        |\n",
+      "| BTC-USD | 0.4318169693243769 |       0.43421831991446413       |\n",
+      "+---------+--------------------+---------------------------------+\n",
+      "\n",
       "+-----------+--------------------+---------------------------------+\n",
       "|   Token   |   Percent Median   | Percent Volume Weighted Average |\n",
       "+-----------+--------------------+---------------------------------+\n",
-      "| MATIC-USD | 3.0871989841964256 |        3.1206645651746876       |\n",
-      "| MATIC-USD | 14.291227332045258 |        14.446145828717347       |\n",
-      "| MATIC-USD | 21.604907705466974 |        21.83910731231006        |\n",
-      "| MATIC-USD | 13.249410622116153 |        13.393035709568716       |\n",
-      "| MATIC-USD | 16.732518224711246 |        16.913900586679425       |\n",
+      "| MATIC-USD | 12.434072462797944 |        12.56910752356748        |\n",
+      "| MATIC-USD | 7.671302816745526  |        7.754613803161287        |\n",
+      "| MATIC-USD | 9.106933677910172  |        9.205835734842854        |\n",
+      "| MATIC-USD | 1.144933307202376  |        1.1573673781133915       |\n",
+      "| MATIC-USD | 5.2176676029379605 |        5.274331906925732        |\n",
       "+-----------+--------------------+---------------------------------+\n",
+      "+----------+--------------------+---------------------------------+\n",
+      "|  Token   |   Percent Median   | Percent Volume Weighted Average |\n",
+      "+----------+--------------------+---------------------------------+\n",
+      "| DOGE-USD | 5.007034312272398  |        5.074257968882773        |\n",
+      "| DOGE-USD | 2.262072105168294  |        2.2924423301242176       |\n",
+      "| DOGE-USD | 2.1915936061216463 |        2.2210175978139564       |\n",
+      "| DOGE-USD | 2.664649518912403  |        2.700424685023672        |\n",
+      "| DOGE-USD | 7.543790563144817  |        7.645072310928024        |\n",
+      "+----------+--------------------+---------------------------------+\n",
       "+---------+--------------------+---------------------------------+\n",
       "|  Token  |   Percent Median   | Percent Volume Weighted Average |\n",
       "+---------+--------------------+---------------------------------+\n",
-      "| DOT-USD | 3.6031366898301096 |        3.6048135697501356       |\n",
-      "| DOT-USD | 1.7531182930100586 |        1.7539341845834413       |\n",
-      "| DOT-USD | 0.7527285528176215 |        0.7530788685297657       |\n",
-      "| DOT-USD | 11.69336961550222  |        11.69881164515406        |\n",
-      "| DOT-USD | 1.5387607171312698 |        1.5394768478724559       |\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "|  Token  |   Percent Median   | Percent Volume Weighted Average |\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "| SOL-USD | 3.1851731673805257 |        3.1938765078733757       |\n",
-      "| SOL-USD | 5.817139590090017  |        5.833034658862252        |\n",
-      "| SOL-USD | 1.0082816380380775 |        1.0110367216543794       |\n",
-      "| SOL-USD | 2.829425998013517  |        2.8371572755817898       |\n",
-      "| SOL-USD |  2.43330730213751  |        2.4399562034252407       |\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "|  Token  |   Percent Median   | Percent Volume Weighted Average |\n",
-      "+---------+--------------------+---------------------------------+\n",
-      "| ETH-USD | 3.227774443935953  |        3.2361535571506286       |\n",
-      "| ETH-USD | 2.6772526860369728 |        2.6842026770447838       |\n",
-      "| ETH-USD | 1.6104343030258303 |        1.6146148960580358       |\n",
-      "| ETH-USD | 4.457659670241716  |        4.469231493396713        |\n",
-      "| ETH-USD | 2.8985772728450305 |        2.9061018095041153       |\n",
+      "| DOT-USD | 1.4500981468185052 |        1.4507901751205212       |\n",
+      "| DOT-USD | 4.4519092613263815 |        4.454033839730681        |\n",
+      "| DOT-USD | 3.6592266663772306 |        3.6609729539800253       |\n",
+      "| DOT-USD | 4.120485597163125  |        4.122452010717644        |\n",
+      "| DOT-USD | 4.628498623845116  |        4.630707475742879        |\n",
       "+---------+--------------------+---------------------------------+\n",
       "+----------+--------------------+---------------------------------+\n",
       "|  Token   |   Percent Median   | Percent Volume Weighted Average |\n",
       "+----------+--------------------+---------------------------------+\n",
-      "| LINK-USD | 0.980431310413268  |        0.9823704221244881       |\n",
-      "| LINK-USD | 2.340876538224293  |        2.3455063588568854       |\n",
-      "| LINK-USD | 1.554373000172365  |        1.5574472623427233       |\n",
-      "| LINK-USD | 1.109692900794437  |        1.1118876680126333       |\n",
-      "| LINK-USD | 1.1841255144605978 |        1.1864674956154806       |\n",
-      "+----------+--------------------+---------------------------------+\n"
+      "| ATOM-USD | 1.399532980968649  |        1.3998244884031925       |\n",
+      "| ATOM-USD | 3.585895494692376  |        3.586642397559557        |\n",
+      "| ATOM-USD | 3.0805245765622553 |        3.0811662161867397       |\n",
+      "| ATOM-USD | 2.4896285795225332 |        2.4901471419644707       |\n",
+      "| ATOM-USD | 1.0283024178394613 |        1.028516602002204        |\n",
+      "+----------+--------------------+---------------------------------+\n",
+      "+---------+--------------------+---------------------------------+\n",
+      "|  Token  |   Percent Median   | Percent Volume Weighted Average |\n",
+      "+---------+--------------------+---------------------------------+\n",
+      "| ETH-USD |  3.42130935852445  |        3.430212451763559        |\n",
+      "| ETH-USD | 6.506097627573802  |        6.523028102936025        |\n",
+      "| ETH-USD | 2.6363268204751162 |        2.643187194978513        |\n",
+      "| ETH-USD | 7.819555001459211  |        7.839903417802467        |\n",
+      "| ETH-USD | 7.381989038157487  |        7.401198799628792        |\n",
+      "+---------+--------------------+---------------------------------+\n"
      ]
     }
    ],
@@ -311,25 +311,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----------+------------------------------------+-------------------------------------+---------------------------------+----------------------------------+\n",
-      "|   Token   | Beta Coefficient Coinbase (Median) | Beta Coefficient Chainlink (Median) | Beta Coefficient Coinbase (VWA) | Beta Coefficient Chainlink (VWA) |\n",
-      "+-----------+------------------------------------+-------------------------------------+---------------------------------+----------------------------------+\n",
-      "|  BTC-USD  |         0.9983448900907197         |          0.9968617365465524         |        0.9915066066077703       |        0.9898368087898881        |\n",
-      "|  ETH-USD  |         0.9950813327454583         |          1.0154989746499845         |        0.9913523825669099       |        1.0116972005373122        |\n",
-      "|  DOGE-USD |         0.9818694678677874         |          1.0257565460899931         |        0.9663644726943311       |        1.0093870014962398        |\n",
-      "|  LINK-USD |         0.9924314014913209         |          1.000518626639554          |        0.9900044724614308       |        0.9979211738522515        |\n",
-      "|  SOL-USD  |         0.9990332780345109         |          0.9989591113353645         |        0.9950566313980186       |        0.9948222466311506        |\n",
-      "| MATIC-USD |         0.9742755043165641         |          0.9941010333673825         |        0.9614327629741736       |        0.979930555905091         |\n",
-      "|  DOT-USD  |         0.9996376683507059         |          0.9992934512040449         |        0.9985340392264893       |        0.9980903467319626        |\n",
-      "|  ATOM-USD |         0.9922894651011555         |          1.001129239535618          |        0.9916899394912355       |        1.0003290239885243        |\n",
-      "+-----------+------------------------------------+-------------------------------------+---------------------------------+----------------------------------+\n"
+      "+-----------+------------------------+-------------------------+---------------------+----------------------+\n",
+      "|   Token   | Beta Coinbase (Median) | Beta Chainlink (Median) | Beta Coinbase (VWA) | Beta Chainlink (VWA) |\n",
+      "+-----------+------------------------+-------------------------+---------------------+----------------------+\n",
+      "|  BTC-USD  |   0.9983594898840009   |    0.9968716899277302   |  0.9915269864598744 |  0.9898529144744312  |\n",
+      "|  ETH-USD  |   0.9950720123295301   |    1.0154886066206983   |  0.9913388118236167 |  1.0116824909298343  |\n",
+      "|  DOGE-USD |   0.981870555419226    |    1.0258051386604028   |  0.9663590619136181 |  1.0094285339851101  |\n",
+      "|  LINK-USD |   0.9924364402025478   |    1.0005145228054955   |  0.9900106455303882 |  0.9979186279942792  |\n",
+      "|  SOL-USD  |   0.9990439055544548   |    0.9989503295234458   |  0.9950563850497116 |  0.994802848142314   |\n",
+      "| MATIC-USD |   0.974239429869979    |    0.9941070383151656   |  0.9613779092340131 |  0.9799189391956623  |\n",
+      "|  DOT-USD  |   0.9996056886333978   |    0.9992945730950317   |  0.9984911961392402 |  0.9980809479469089  |\n",
+      "|  ATOM-USD |   0.9923279467318877   |    1.001134315108664    |  0.9917425120683253 |  1.000348959960796   |\n",
+      "+-----------+------------------------+-------------------------+---------------------+----------------------+\n"
      ]
     }
    ],
