--- a/show.ipynb
+++ b/show.ipynb
@@ -216,13 +216,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Standard Deviation"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -341,7 +334,7 @@
     }
    ],
    "source": [
-    "t = PrettyTable(['Token', 'Beta Coinbase (Median)','Beta Chainlink (Median)', 'Beta Coinbase (VWA)','Beta Chainlink (VWA)'])\n",
+    "t = PrettyTable(['Token', 'Median (Benmark: Coinbase)','Median (Benmark: Chainlink)', 'VWA (Benmark: Coinbase)','VWA (Benmark: Chainlink)'])\n",
     "for token in TOKENS:\n",
     "    cov(token)\n",
     "print(t)"
