--- a/show.ipynb
+++ b/show.ipynb
@@ -311,25 +311,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----------+------------------------+-------------------------+---------------------+----------------------+\n",
-      "|   Token   | Beta Coinbase (Median) | Beta Chainlink (Median) | Beta Coinbase (VWA) | Beta Chainlink (VWA) |\n",
-      "+-----------+------------------------+-------------------------+---------------------+----------------------+\n",
-      "|  BTC-USD  |   0.9983594898840009   |    0.9968716899277302   |  0.9915269864598744 |  0.9898529144744312  |\n",
-      "|  ETH-USD  |   0.9950720123295301   |    1.0154886066206983   |  0.9913388118236167 |  1.0116824909298343  |\n",
-      "|  DOGE-USD |   0.981870555419226    |    1.0258051386604028   |  0.9663590619136181 |  1.0094285339851101  |\n",
-      "|  LINK-USD |   0.9924364402025478   |    1.0005145228054955   |  0.9900106455303882 |  0.9979186279942792  |\n",
-      "|  SOL-USD  |   0.9990439055544548   |    0.9989503295234458   |  0.9950563850497116 |  0.994802848142314   |\n",
-      "| MATIC-USD |   0.974239429869979    |    0.9941070383151656   |  0.9613779092340131 |  0.9799189391956623  |\n",
-      "|  DOT-USD  |   0.9996056886333978   |    0.9992945730950317   |  0.9984911961392402 |  0.9980809479469089  |\n",
-      "|  ATOM-USD |   0.9923279467318877   |    1.001134315108664    |  0.9917425120683253 |  1.000348959960796   |\n",
-      "+-----------+------------------------+-------------------------+---------------------+----------------------+\n"
+      "+-----------+----------------------------+-----------------------------+-------------------------+--------------------------+\n",
+      "|   Token   | Median (Benmark: Coinbase) | Median (Benmark: Chainlink) | VWA (Benmark: Coinbase) | VWA (Benmark: Chainlink) |\n",
+      "+-----------+----------------------------+-----------------------------+-------------------------+--------------------------+\n",
+      "|  BTC-USD  |     0.9987494004532759     |      0.997372382650318      |    0.9928569345595073   |    0.9912905791288159    |\n",
+      "|  ETH-USD  |     0.9951216950251055     |      1.0150006429163874     |    0.9913711851409007   |    1.0111647764052705    |\n",
+      "|  DOGE-USD |     0.9820494583233775     |      1.029523278696899      |    0.9658751873416672   |    1.012495712804323     |\n",
+      "|  LINK-USD |     0.9929224510250384     |      1.0008408275578429     |    0.9910975509346936   |    0.9988571199751737    |\n",
+      "|  SOL-USD  |     0.9992136677373085     |      0.9993178552601585     |    0.9956553071977535   |    0.9955906313735366    |\n",
+      "| MATIC-USD |     0.9739792811114064     |      0.9940028089531961     |    0.9610264612121673   |    0.9796293953438905    |\n",
+      "|  DOT-USD  |     0.9996488661578339     |      0.9996749933235539     |    0.9990770679877093   |    0.9989984088167061    |\n",
+      "|  ATOM-USD |     0.993006920982574      |      1.001354830136021      |    0.9927591847019597   |    1.0009010597842982    |\n",
+      "+-----------+----------------------------+-----------------------------+-------------------------+--------------------------+\n"
      ]
     }
    ],
@@ -339,6 +339,13 @@
     "    cov(token)\n",
     "print(t)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
