--- a/show.ipynb
+++ b/show.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,7 @@
     "import statistics as sta\n",
     "import random\n",
     "import threading\n",
-    "from prettytable import PrettyTable\n",
-    "\n"
+    "from prettytable import PrettyTable\n"
    ]
   },
   {
